# mpi-template

./: CMakeLists.txt  README.md  main.cpp  mpi_configure.sh
